cmake_minimum_required (VERSION 2.6)
project (allocator)
set (CMAKE_CXX_COMPILER "g++")
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++0x")
find_package (Threads)
add_executable(allocator_tests allocator_tests.cpp allocator.cpp fixed_size_blocks_allocator.cpp)
add_executable(fixed_size_blocks_allocator_tests fixed_size_blocks_allocator_tests.cpp fixed_size_blocks_allocator.cpp)
target_link_libraries (allocator_tests ${CMAKE_THREAD_LIBS_INIT})
